samples/_failures_safe/1761082270_5e2d82_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ad476229.c: In function ‘main’:
./samples/SAFE/__tmp_ad476229.c:152:5: error: expected expression at end of input
  152 |     if (!process_text(&analyzer,
      |     ^~
./samples/SAFE/__tmp_ad476229.c:152:5: error: expected declaration or statement at end of input
